[package]
name = "script-macro"
authors = ["Markus Unterwaditzer <markus-honeypot@unterwaditzer.net>"]
description = "Write proc-macros inline with other source code"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MIT"
repository = "https://github.com/untitaker/script-macro"
exclude = ["example_crates/**"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
glob = "0.3.1"
rhai = { version = "1.13.0", features = ["serde"] }
rhai-fs = "0.1.2"
serde_json = "1.0.96"
serde_yaml = "0.9.21"
syn = { version = "2.0.15", features = ["full"] }
