[package]
name = "script-macro"
authors = ["Markus Unterwaditzer <markus-honeypot@unterwaditzer.net>"]
description = "Write proc-macros inline with other source code"
version = "0.1.1"
edition = "2021"
readme = "README.md"
license = "MIT"
repository = "https://github.com/untitaker/script-macro"
exclude = ["example_crates/**"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[features]
default = []
parse-json = ["dep:serde_json", "rhai/serde"]
parse-yaml = ["dep:serde_yaml", "rhai/serde"]
filesystem = ["dep:rhai-fs"]

[dependencies]
glob = { version = "0.3.1", optional = true }
rhai = { version = "1.13.0" }
rhai-fs = { version = "0.1.2", optional = true }
serde_json = { version = "1.0.96", optional = true }
serde_yaml = { version = "0.9.21", optional = true }
syn = "2.0.15"
